# fintual_portfolio_challenge

./: .gitignore  README.md  link_chat.txt  pyproject.toml
examples/: example_usage.py
src/: portfolio.py  stock.py
tests/: test_portfolio.py
